libs/@local/hashql/hir/tests/ui/reify/tuple.jsonc
//@ run: fail
//@ description: tuple literals are unsupported in the current version
{ "#tuple": [{ "#literal": 2 }] }
//~^ ERROR `tuple literal` not supported yet
